--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -58,9 +58,12 @@
   <p class="form-container__message">
     <!-- salto de linea -->
 
-    También puedes ingresar <br />
-    desde un computador en <br />
+    Disponible desde<br />
+    cualquier dispositivo en <br />
     <a href="">{{ mainUrl }}</a> <br />
-    <a href="">Términos</a>|<a href="">Privacidad</a>
+    <br>
+    <!--   write a  Powered by-->
+    <span >Powered by: <br> <a href="https://www.ucuenca.edu.ec/epicentro-de-innovacion/">Dirección de Innovación <br>Educativa UCuenca </a></span>
+
   </p>
 </div>
