--- a/src/app/modules/admin/components/pages/admin-home/admin-home.component.html
+++ b/src/app/modules/admin/components/pages/admin-home/admin-home.component.html
@@ -2,7 +2,10 @@
         <div class="grid">
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <i class="pi pi-address-book text-4xl text-blue-500"></i>
+                    <a routerLink="/admin/createSurvey">
+                        <i class="pi pi-file-edit text-4xl text-blue-500"></i>
+                    </a>
+                
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Enviar Cuestionario</div>
                 <span class="text-700 line-height-3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span>
@@ -16,21 +19,27 @@
             </div> -->
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <i class="pi pi-chart-pie text-4xl text-blue-500"></i>
+                    <a routerLink="/admin/dashboard">
+                        <i class="pi pi-chart-pie text-4xl text-blue-500"></i>
+                    </a>
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Analíticas</div>
                 <span class="text-700 line-height-3">Ornare suspendisse sed nisi lacus sed viverra tellus. Neque volutpat ac tincidunt vitae semper.</span>
             </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <i class="pi pi-comments text-4xl text-blue-500"></i>
+                    <a routerLink="/admin/comments">
+                        <i class="pi pi-comments text-4xl text-blue-500"></i>
+                    </a>
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Comntarios y dudas</div>
                 <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
             </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <i class="pi pi-github text-4xl text-blue-500"></i>
+                    <a routerLink="/admin/roomInfo">
+                        <i class="pi pi-wallet text-4xl text-blue-500"></i>
+                    </a>
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Crear Sala</div>
                 <span class="text-700 line-height-3">Nec tincidunt praesent semper feugiat. Sed adipiscing diam donec adipiscing tristique risus nec feugiat. </span>
