--- a/src/app/modules/admin/components/pages/admin-home/admin-home.component.html
+++ b/src/app/modules/admin/components/pages/admin-home/admin-home.component.html
@@ -2,7 +2,7 @@
         <div class="grid">
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <a routerLink="/admin/createSurvey">
+                    <a routerLink="/admin/panel/survey">
                         <i class="pi pi-file-edit text-4xl text-blue-500"></i>
                     </a>
                 
@@ -19,7 +19,7 @@
             </div> -->
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <a routerLink="/admin/dashboard">
+                    <a routerLink="/admin/panel/dashboard">
                         <i class="pi pi-chart-pie text-4xl text-blue-500"></i>
                     </a>
                 </span>
@@ -28,16 +28,16 @@
             </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <a routerLink="/admin/comments">
+                    <a routerLink="/admin/panel/comments">
                         <i class="pi pi-comments text-4xl text-blue-500"></i>
                     </a>
                 </span>
-                <div class="text-900 text-xl mb-3 font-medium">Comntarios y dudas</div>
+                <div class="text-900 text-xl mb-3 font-medium">Comentarios y dudas</div>
                 <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
             </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <a routerLink="/admin/roomInfo">
+                    <a routerLink="/admin/panel/roomInfo">
                         <i class="pi pi-wallet text-4xl text-blue-500"></i>
                     </a>
                 </span>
