--- a/src/app/modules/admin/components/pages/survey/survey.component.html
+++ b/src/app/modules/admin/components/pages/survey/survey.component.html
@@ -1,8 +1,64 @@
-<div class="grid p-fluid flex-container">
-    <div class="col-12 lg:col-8">
+<div class="grid">
+    <!-- <div class="col-12">
         <div class="card">
-            <h5>Bar Chart</h5>
-            <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
+            <h4>Empty Page</h4>
+            <p>This is your empty page template to start building beautiful applications.</p>
+        </div>
+    </div> -->
+    <div class="col-12 lg:col-6 xl:col-3">
+        <div class="card h-full">
+            <h5>Customer Satisfaction Poll</h5>
+            <ul class="list-none p-0 m-0">
+                <li class="mb-4 flex align-items-center">
+                    <p-avatar label="BS" size="large" shape="circle" styleClass="text-base font-bold"
+                              [style]="{'background-color':'rgba(101, 214, 173, 0.1)', 'color': '#27AB83', 'border': '1px solid #65D6AD'}"></p-avatar>
+                    <div class="ml-3">
+                        <span class="block">Brooklyn Simmons</span>
+                        <span class="text-color-secondary block">Manager at Mitsubishi</span>
+                    </div>
+                </li>
+                <li class="mb-4 flex align-items-center">
+                    <p-avatar label="LA" size="large" shape="circle" styleClass="text-base font-bold"
+                              [style]="{'background-color':'rgba(250, 219, 95, 0.1)', 'color': '#DE911D', 'border': '1px solid #FADB5F'}"></p-avatar>
+                    <div class="ml-3">
+                        <span class="block">Leslie Alexander</span>
+                        <span class="text-color-secondary  block">Customer Success at General Electric</span>
+                    </div>
+                </li>
+                <li class="mb-4 flex align-items-center">
+                    <p-avatar label="JB" size="large" shape="circle" styleClass="text-base font-bold"
+                              [style]="{'background-color':'rgba(94, 208, 250, 0.1)', 'color': '#1992D4', 'border': '1px solid #5ED0FA'}"></p-avatar>
+                    <div class="ml-3">
+                        <span class="block">Jerome Bell</span>
+                        <span class="text-color-secondary  block">Mario Carrier at Nintendo</span>
+                    </div>
+                </li>
+                <li class="mb-4 flex align-items-center">
+                    <p-avatar label="JJ" size="large" shape="circle" styleClass="text-base font-bold"
+                              [style]="{'background-color':'rgba(43, 176, 237, 0.1)', 'color': '#127FBF', 'border': '1px solid #2BB0ED'}"></p-avatar>
+                    <div class="ml-3">
+                        <span class="block">Jim Jones</span>
+                        <span class="text-color-secondary  block">Reliability Engineer at eBay</span>
+                    </div>
+                </li>
+                <li class="mb-4 flex align-items-center">
+                    <p-avatar label="AB" size="large" shape="circle" styleClass="text-base font-bold"
+                              [style]="{'background-color':'rgba(255, 155, 155, 0.1)', 'color': '#CF1124', 'border': '1px solid #FF9B9B'}"></p-avatar>
+                    <div class="ml-3">
+                        <span class="block">Annette Black</span>
+                        <span class="text-color-secondary  block">Delivery Woman at Pizza Hut</span>
+                    </div>
+                </li>
+                <li class="mb-4 flex align-items-center">
+                    <p-avatar label="AF" size="large" shape="circle" styleClass="text-base font-bold"
+                              [style]="{'background-color':'rgba(250, 219, 95, 0.1)', 'color': '#DE911D', 'border': '1px solid #FADB5F'}"></p-avatar>
+                    <div class="ml-3">
+                        <span class="block">Albert Flores</span>
+                        <span class="text-color-secondary  block">Team Leader at Insomniac Games</span>
+                    </div>
+                </li>
+            </ul>
+            <button type="button" pButton pRipple class="w-full mt-3 " label="Seleccionar encuesta" icon="pi pi-arrow-right" iconPos="right"></button>
         </div>
     </div>
 </div>
