--- a/src/app/modules/admin/components/layout/app.breadcrumb.component.html
+++ b/src/app/modules/admin/components/layout/app.breadcrumb.component.html
@@ -1,7 +1,7 @@
 <nav class="layout-breadcrumb">
     <ol>
         <li>
-            <a [routerLink]="['/admin']">
+            <a [routerLink]="['/admin/panel']">
                 <i class="pi pi-home"></i>
             </a>
         </li>
