--- a/src/app/modules/admin/components/layout/app.topbar.component.html
+++ b/src/app/modules/admin/components/layout/app.topbar.component.html
@@ -37,16 +37,16 @@
     
     <div class="topbar-profile">
         <button class="topbar-profile-button p-link" type="button" pStyleClass="@next" enterClass="hidden" enterActiveClass="scalein" leaveToClass="hidden" leaveActiveClass="fadeout" [hideOnOutsideClick]="true">
-            <img alt="avatar" src="assets/layout/images/avatar.png">
+            <img alt="avatar" src="{{profilePicture}}">
             <span class="profile-details">
-                <span class="profile-name">Gene Russell</span>
-                <span class="profile-job">Developer</span>
+                <span class="profile-name">{{ profileName }}</span>
+                <span class="profile-job">{{ email }}</span>
             </span>
             <i class="pi pi-angle-down"></i>
         </button>
         <ul class="list-none p-3 m-0 border-round shadow-2 hidden absolute surface-overlay origin-top w-full sm:w-12rem mt-2 right-0 top-auto">
             <li>
-                <a pRipple class="flex p-2 border-round align-items-center hover:surface-hover transition-colors transition-duration-150 cursor-pointer">
+                <!-- <a pRipple class="flex p-2 border-round align-items-center hover:surface-hover transition-colors transition-duration-150 cursor-pointer">
                     <i class="pi pi-user mr-3"></i>
                     <span>Profile</span>
                 </a>
@@ -57,10 +57,10 @@
                 <a pRipple class="flex p-2 border-round align-items-center hover:surface-hover transition-colors transition-duration-150 cursor-pointer">
                     <i class="pi pi-cog mr-3"></i>
                     <span>Settings</span>
-                </a>
-                <a pRipple class="flex p-2 border-round align-items-center hover:surface-hover transition-colors transition-duration-150 cursor-pointer">
-                    <i class="pi pi-power-off mr-3"></i>
-                    <span>Sign Out</span>
+                </a> -->
+                <a pRipple class="flex p-2 border-round align-items-center hover:surface-hover transition-colors transition-duration-150 cursor-pointer" (click)="logout()">
+                    <i class="pi pi-sign-out mr-3"></i>
+                    <span>Cerrar sesión</span>
                 </a>
             </li>
         </ul>
