--- a/src/app/modules/admin/components/pages/room-info/room-info.component.html
+++ b/src/app/modules/admin/components/pages/room-info/room-info.component.html
@@ -4,15 +4,20 @@
             <img src="assets/logos/main-logo.svg" alt="Image" height="50" class="mb-3">
             <div class="text-900 text-3xl font-medium mb-3">Crear una sala</div>
         </div>
+        <form [formGroup]="myFormRoom" class="form-container__-form" (ngSubmit)="createRoom()">
 
-        <div class="text-center">
-            <label for="email1" class="block text-900 font-medium mb-2">Nombre de la sala</label>
-            <input id="email1" type="text" placeholder="Nombre" pInputText class="w-full mb-3 input-limited-width">
-        </div>
-        <div class="text-center">
-            <button pButton pRipple label="Crear sala" icon="pi pi-sign-in" class="w-full btn-limited-width"
-                (click)="toggleDivs()"></button>
-        </div>
+            <div class="text-center">
+                <label for="email1" class="block text-900 font-medium mb-2">Nombre de la sala</label>
+                <input id="email1" formControlName="roomName" type="text" placeholder="Nombre" pInputText
+                    class="w-full mb-3 input-limited-width" [class.is-valid]="isRoomNameValid"
+                    [class.is-invalid]="isRoomNameInvalid">
+            </div>
+            <div class="text-center">
+                <button type="submit" pButton pRipple label="Crear sala" icon="pi pi-sign-in"
+                    class="w-full btn-limited-width" [class.is-enabled]="isRoomNameValid">
+                </button>
+            </div>
+        </form>
     </div>
 
     <div id='exitDiv' class="surface-card p-4 shadow-2 border-round w-full lg:w-5">
@@ -22,13 +27,15 @@
         </div>
         <div>
             <label for="email1" class="block text-900 font-medium mb-2">Tu codigo de sala es:</label>
-            <div class="text-center text-900 text-3xl font-medium mb-3">Tjmp4</div>
+            <div class="text-center text-900 text-3xl font-medium mb-3">{{newCode}}</div>
             <div class="flex align-items-center justify-content-between mb-6">
-                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Copiar código</a>
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer"
+                    (click)="copyCodeToClipboard()">Copiar código</a>
+                <div *ngIf="isCodeCopied" class="text-green-500">¡Código copiado!</div>
             </div>
             <div class="text-center">
                 <button pButton pRipple label="Salir de la sala" icon="pi pi-sign-out" class="w-full btn-limited-width"
-                    (click)="toggleDivs()"></button>
+                    (click)="exitRoom()"></button>
             </div>
         </div>
     </div>
