--- a/src/app/modules/dashboard/components/poll-list/poll-list.component.html
+++ b/src/app/modules/dashboard/components/poll-list/poll-list.component.html
@@ -7,34 +7,22 @@
             <p>{{ poll.pollTitle }}</p>
           </div>
           <div class="poll__body">
-            <div
-              class="poll__body__quesions"
-              *ngFor="let questions of poll.questions; index as j"
-            >
+            <div class="poll__body__quesions" *ngFor="let questions of poll.questions; index as j">
               <p>{{ questions.question }}</p>
             </div>
           </div>
           <div class="poll__footer__option">
             <p>Seleccionar Encuesta</p>
-            <input
-              type="radio"
-              [name]="pollControlName"
-              [value]="poll._id"
-              [formControlName]="pollControlName"
-              class=""
-            />
+            <input type="radio" [name]="pollControlName" [value]="poll._id" [formControlName]="pollControlName"
+              class="" />
           </div>
         </div>
       </div>
       <div *ngIf="pollSent" class="poll-sent-message">
         Encuesta enviada con éxito.
       </div>
-      <button
-        type="submit"
-        [disabled]="myPolls.invalid"
-        class="poll-container__button poll-container__button--primary"
-        [class.is-enabled]="myPolls.valid"
-      >
+      <button type="submit" [disabled]="myPolls.invalid" class="poll-container__button poll-container__button--primary"
+        [class.is-enabled]="myPolls.valid">
         Enviar encuesta
       </button>
     </div>
