--- a/src/app/modules/admin/components/pages/admin-home/admin-home.component.html
+++ b/src/app/modules/admin/components/pages/admin-home/admin-home.component.html
@@ -8,7 +8,7 @@
                 
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Enviar Cuestionario</div>
-                <span class="text-700 line-height-3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span>
+                <span class="text-700 line-height-3">Crea y envía un nuevo cuestionario para tus estudiantes.</span>
             </div>
             <!-- <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
@@ -24,7 +24,7 @@
                     </a>
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Analíticas</div>
-                <span class="text-700 line-height-3">Ornare suspendisse sed nisi lacus sed viverra tellus. Neque volutpat ac tincidunt vitae semper.</span>
+                <span class="text-700 line-height-3">Analiza los datos más relevantes de las sensaciones de los estudiantes sobre tu clase.</span>
             </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
@@ -33,7 +33,7 @@
                     </a>
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Comentarios y dudas</div>
-                <span class="text-700 line-height-3">Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum tellus.</span>
+                <span class="text-700 line-height-3">Resuelve todas las inquietudes y detalles faltantes de tu clase para mejorar el nivel de enseñanza.</span>
             </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
@@ -42,7 +42,7 @@
                     </a>
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Crear Sala</div>
-                <span class="text-700 line-height-3">Nec tincidunt praesent semper feugiat. Sed adipiscing diam donec adipiscing tristique risus nec feugiat. </span>
+                <span class="text-700 line-height-3">Únete a una sala e invita a tus estudiantes a formar parte y aprender juntos. </span>
             </div>
         </div>
     </div>
