--- a/src/app/modules/admin/components/pages/login/login.component.html
+++ b/src/app/modules/admin/components/pages/login/login.component.html
@@ -16,9 +16,11 @@
             <input type="password" pInputText placeholder="Password" class="w-full">         
         </span> -->
 
-        <button id="google-btn"></button>
+        <div class="flex justify-center">
+            <button id="google-btn"></button>
+        </div>
 
-        <span class="text-color-secondary text-center mb-4">or sign in with below</span>
+        <!-- <span class="text-color-secondary text-center mb-4">or sign in with below</span>
 
         <div class="flex gap-4 align-items-center justify-content-center">
             <a href="https://www.facebook.com" class="inline-flex flex-shrink-0 w-3rem h-3rem justify-content-center align-items-center surface-ground border-circle">
@@ -33,7 +35,7 @@
             <a href="https://www.github.com" class="inline-flex flex-shrink-0 w-3rem h-3rem justify-content-center align-items-center surface-ground border-circle">
                 <i class="pi pi-github text-2xl text-color"></i>
             </a>
-        </div>
+        </div> -->
     </div>
 </div>
 
