--- a/src/app/modules/admin/components/pages/survey/survey-results/survey-results.component.html
+++ b/src/app/modules/admin/components/pages/survey/survey-results/survey-results.component.html
@@ -1,7 +1,7 @@
 <div class="grid p-fluid flex-container">
     <div class="col-12 lg:col-8">
         <div class="card">
-            <h5>Bar Chart</h5>
+            <h5>Encuesta</h5>
             <p-chart type="bar" [data]="barData" [options]="barOptions"></p-chart>
         </div>
     </div>
