New emotions chart and fixes
The emotions pie chart has ben changed by radar  chart
Real time data updates is now enabled on comments page and for emotions chart.
I divided the dashboard component into some components for individual management of each chart

--- a/src/app/modules/admin/pages/comments/comments-list/comments-list.component.html
+++ b/src/app/modules/admin/pages/comments/comments-list/comments-list.component.html
@@ -5,7 +5,7 @@
             class="flex flex-column gap-3 md:flex-row md:align-items-center p-2 border-bottom-1 surface-border">
             <div class="flex align-items-center flex-1">
                 <p-checkbox [binary]="true" (onChange)="onCheckboxChange($event, task)" [(ngModel)]="task.done"
-                    [inputId]="task._id.toString()"></p-checkbox>
+                    [inputId]="task._id"></p-checkbox>
                 <label for="task.id" style="word-break: break-word;" class="font-medium ml-2"
                     [ngClass]="{'line-through': task.done}">{{task.text}}</label>
             </div>
