--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,14 +1,17 @@
 <div class="grid p-fluid">
-    <div class="col-12 lg:col-4 dashboard-conatiner">
-        <app-emotions-chart></app-emotions-chart>
-    </div>
-    <div class="col-12 lg:col-4 dashboard-conatiner">
+    <div class="col-12 lg:col-4 dashboard-container">
         <app-excellent-class-chart></app-excellent-class-chart>
     </div>
-    <div class="col-12 lg:col-4">
-        <div class="card">
-            <h5>Tengo sueño</h5>
-            <p-chart type="line" [data]="lineData" [options]="lineOptions"></p-chart>
-        </div>
+    <div class="col-12 lg:col-4 dashboard-container">
+        <app-sleep-chart></app-sleep-chart>
     </div>
+    <div class="col-12 lg:col-4 dashboard-container">
+        <app-emotions-chart></app-emotions-chart>
+    </div>
+        <div class="col-12 lg:col-4 dashboard-container">
+            <app-ido-not-get-it-chart></app-ido-not-get-it-chart>
+        </div>
+        <div class="col-12 lg:col-4 dashboard-container">
+            <app-take-abreak-chart></app-take-abreak-chart>
+        </div>
 </div>
