--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,11 +41,11 @@ $gutter: 1rem; //for primeflex grid system
 //   --tran-05: all 0.5s ease;
 // }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+//* {
+//  margin: 0;
+//  padding: 0;
+//  box-sizing: border-box;
+//}
 
 // body {
 //   font-family: var(--titles-link);
