--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,85 +18,77 @@ $gutter: 1rem; //for primeflex grid system
 @import "assets/demo/styles/badges.scss";
 @import "assets/demo/styles/code.scss";
 
-// :root {
-//   --info-text: #333333;
-//   --info-notification: #d2070f;
-//   --main-primary_color: #173264;
-//   --main-secondary_color: #0e5879;
-//   --main-third_color: #19a7ce;
-//   --main-background: #fdf8f8;
-//   --main-accent_color: #f0f0f0;
+:root {
+  --info-text: #333333;
+  --info-notification: #d2070f;
+  --main-primary_color: #173264;
+  --main-secondary_color: #0e5879;
+  --main-third_color: #19a7ce;
+  --main-background: #fdf8f8;
+  --main-accent_color: #f0f0f0;
 
-//   --font-family: "Inter", sans-serif;
-//   --titles-h1: 1.875rem;
-//   --titles-h2: 1.5rem;
-//   --titles-h3: 1.25rem;
-//   --titles-quote: 1.1875rem;
-//   --text-paragraph: 1rem;
+  --titles-h1: 1.875rem;
+  --titles-h2: 1.5rem;
+  --titles-h3: 1.25rem;
+  --titles-quote: 1.1875rem;
+  --text-paragraph: 1rem;
 
-//   /*======Transitions========*/
-//   --tran-02: all 0.2s ease;
-//   --tran-03: all 0.3s ease;
-//   --tran-04: all 0.4s ease;
-//   --tran-05: all 0.5s ease;
-// }
+  /*======Transitions========*/
+  --tran-02: all 0.2s ease;
+  --tran-03: all 0.3s ease;
+  --tran-04: all 0.4s ease;
+  --tran-05: all 0.5s ease;
+}
 
-// * {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-// }
+body {
+  background-color: var(--main-background);
+  min-height: 100vh;
+}
 
-// body {
-//   font-family: var(--titles-link);
-//   background-color: var(--main-background);
-//   min-height: 100vh;
-// }
+.fixed-size {
+  width: 200px;
+  height: 100px;
+}
 
-// .fixed-size {
-//   width: 200px;
-//   height: 100px;
-// }
+.img-fixed-size {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
-// .img-fixed-size {
-//   object-fit: cover;
-//   width: 100%;
-//   height: 100%;
-// }
+.footer-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 
-// .footer-container {
-//   position: fixed;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-// }
+.text-area {
+  border: 1px solid var(--info-text, #333);
+  background: var(--main-background, #fdf8f8);
+  color: var(--info-text, #333);
+  font-family: Inter;
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  padding: 16px;
+  /* Estilos del bloque 'text-area' */
+  width: 100%;
+  height: 100%;
+}
+.btn-icon {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0; /* Elimina el relleno interno */
+  margin: 0; /* Elimina los márgenes */
+  line-height: 1; /* Ajusta el espacio vertical al tamaño del ícono */
+}
 
-// .text-area {
-//   border: 1px solid var(--info-text, #333);
-//   background: var(--main-background, #fdf8f8);
-//   color: var(--info-text, #333);
-//   font-family: Inter;
-//   font-size: 1.1875rem;
-//   font-style: normal;
-//   font-weight: 400;
-//   line-height: 100%;
-//   padding: 16px;
-//   /* Estilos del bloque 'text-area' */
-//   width: 100%;
-//   height: 100%;
-// }
-// .btn-icon {
-//   background: none;
-//   border: none;
-//   cursor: pointer;
-//   padding: 0; /* Elimina el relleno interno */
-//   margin: 0; /* Elimina los márgenes */
-//   line-height: 1; /* Ajusta el espacio vertical al tamaño del ícono */
-// }
-
-// .btn-icon:focus {
-//   outline: none; /* Elimina el contorno al enfocar */
-// }
-// .card {
-//   margin: 0; /* Elimina los márgenes */
-// }
+.btn-icon:focus {
+  outline: none; /* Elimina el contorno al enfocar */
+}
+.card {
+  margin: 0; /* Elimina los márgenes */
+}
