fix errors and make flashquestions
fix errors like button google
create flashquestions functions
fix layout style
fix styles responsives in surveys, in charts, etc.

--- a/src/app/modules/admin/components/emotions-chart/emotions-chart.component.html
+++ b/src/app/modules/admin/components/emotions-chart/emotions-chart.component.html
@@ -1,6 +1,4 @@
-<div class="barChart-container">
     <div class="card">
-        <h5 class="text-left w-full">Emociones</h5>
+        <h5 >Emociones</h5>
         <p-chart id="emotionsChart" type="radar" [data]="radarData" [options]="pieOptions"></p-chart>
     </div>
-</div>
