--- a/src/app/modules/student/components/button-icon-text/button-icon-text.component.html
+++ b/src/app/modules/student/components/button-icon-text/button-icon-text.component.html
@@ -30,7 +30,7 @@
   </ng-container>
   <ng-container *ngIf="imageUrl === './../../../../assets/icons/poll-icon.svg'">
     <div
-      *ngIf="isEnabledPoll === false"
+      *ngIf="!isEnabledPoll"
       [class.confirmation-message]="!isEnabledPoll"
     >
       1
