--- a/src/app/modules/student/pages/home/home.component.html
+++ b/src/app/modules/student/pages/home/home.component.html
@@ -14,7 +14,7 @@
       (click)="handlerButtonSendComment()"
     />
     <student-button-icon-text
-      class="boton fila1-col2 ="
+      class="boton fila1-col2"
       routerLink="/student/my-poll"
       [imageUrl]="'./../../../../assets/icons/poll-icon.svg'"
       [textButton]="'Encuestas'"
