--- a/src/app/modules/admin/components/emotions-chart/emotions-chart.component.scss
+++ b/src/app/modules/admin/components/emotions-chart/emotions-chart.component.scss
@@ -1,13 +1,10 @@
-.barChart-container {
+.card {
+
     width: 100%;
     height: 100%; /* Adjust height dynamically */
-    border-radius: 16px;
-    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
-  
-  /* Additional styles for responsiveness and aesthetics */
-  @media (max-width: 768px) {
-    .barChart-container {
-      padding: 4px; /* Adjust padding for smaller screens */
-    }
-  }
+
