--- a/src/app/modules/admin/pages/admin-home/admin-home.component.html
+++ b/src/app/modules/admin/pages/admin-home/admin-home.component.html
@@ -5,7 +5,7 @@
                     <a routerLink="/admin/panel/survey">
                         <i class="pi pi-file-edit text-4xl text-blue-500"></i>
                     </a>
-                
+
                 </span>
                 <div class="text-900 text-xl mb-3 font-medium">Enviar Cuestionario</div>
                 <span class="text-700 line-height-3">Crea y envía un nuevo cuestionario para tus estudiantes.</span>
@@ -44,5 +44,14 @@
                 <div class="text-900 text-xl mb-3 font-medium">Crear Sala</div>
                 <span class="text-700 line-height-3">Únete a una sala e invita a tus estudiantes a formar parte y aprender juntos. </span>
             </div>
+          <div class="col-12 md:col-4 mb-4 px-5">
+                <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                    <a routerLink="/admin/panel/flashquestions">
+                        <i class="pi pi-question text-4xl text-blue-500"></i>
+                    </a>
+                </span>
+            <div class="text-900 text-xl mb-3 font-medium">Flashquestions</div>
+            <span class="text-700 line-height-3">Envía una pregunta de manera efectiva.</span>
+          </div>
         </div>
     </div>
