--- a/src/app/modules/admin/pages/flashquestions/flashquestions.component.html
+++ b/src/app/modules/admin/pages/flashquestions/flashquestions.component.html
@@ -7,7 +7,7 @@
     <div>
       <button pButton label="Enviar" (click)="saveQuestion()"  ></button>
     </div>
-    <div *ngIf="isQuestionsend" class="text-green-500 mt-3">¡Pregunta enviada!</div>
+    <div *ngIf="isQuestionsend()" class="text-green-500 mt-3">¡Pregunta enviada!</div>
   </div>
 </div>
 <!--      create a cards answers like mentimeter with tailwind css for show the user answers-->
